      in the OpenStack based drivers. (LIBCLOUD-402)
      [Brian Curtin]

    - Add new driver for NephoScale provider (http://nephoscale.com/).
      (LIBCLOUD-404)
      [Markos Gogoulos]

    - Update network related extension methods so they work correctly with
      both, OpenStack and Rackspace driver. (LIBCLOUD-368)
      [Tomaz Muraus]

  *) Storage

    - Allow users to filter objects starting with a prefix by passing ex_prefix
      argument to the list_container_objects method in the S3, Google Storage
      and CloudFiles driver. (LIBCLOUD-369)
      [Stefan Friesel]

    - Fix an issue with mutating connectionCls.host attribute in the Azure
      driver. This bug prevented user from having multiple Azure drivers with
      different keys instantiated at the same time. (LIBCLOUD-399)
      [Olivier Grisel]

 *) Load Balancer

    - Add new driver for Google Compute Engine (LIBCLOUD-386)
      [Rick Wright]

 *) DNS

   - Use string instead of integer for RecordType ENUM value.
     Note: If you directly use an integer instead of RecordType ENUM class you
     need to update your code to use the RecordType ENUM otherwise the code
     won't work.
     [Tomaz Muraus]

   - Add method "export_zone_to_bind_format" which allows users to export
     Libcloud Zone to BIND zone format. (LIBCLOUD-398)
     [Tomaz Muraus]

Changes with Apache Libcloud 0.13.2

  *) General

    - Don't sent Content-Length: 0 header with POST and PUT request if "raw"
      mode is used. This fixes a regression which could cause broken behavior
      in some storage driver when uploading a file from disk.
      (LIBCLOUD-396)
      [Ivan Kusalic]

  *) Compute

    - Added Ubuntu Linux 12.04 image to ElasticHost driver image list.
      (LIBCLOUD-364)
      [Bob Thompson]

    - Update ElasticHosts driver to store drive UUID in the node 'extra' field.
      (LIBCLOUD-357)
      [Bob Thompson]

  *) Storage
