@@ -93,6 +93,10 @@ Changes with Apache Libcloud in development
       both, OpenStack and Rackspace driver. (LIBCLOUD-368)
       [Tomaz Muraus]
 
+    - Add tests for networking functionality in the OpenStack and Rackspace
+      driver.
+      [Tomaz Muraus]
+
   *) Storage
 
     - Allow users to filter objects starting with a prefix by passing ex_prefix
